--- a/test.html
+++ b/test.html
@@ -66,15 +66,12 @@
 
 
 
+<div>
+  <img src="photo.png" class="img_div">
+</div>
 
 
 
-  <div class="det_cont">
-    <p class="det_cont_p">
-      Another benefit of combining financial analysis with data science is the ability to identify patterns and trends that might not be immediately apparent through traditional financial analysis methods. For example, data science techniques can be used to analyze customer behavior, such as purchasing patterns and product preferences. This information can then be used to make more targeted marketing and sales decisions.
-
-    </p>
-  </div>
 
   <!--Header ends-->
 
@@ -85,7 +82,7 @@
         class="fa fa-brands fa-facebook-f  fa-2x"></i></a>
     <a href="#" target="_blank" rel="noopener noreferrer"> <i
         class="fa-brands fa-linkedin-in fa-2x fa"></i></a>
-    <a href="#"
+    <a href="https://www.instagram.com/mbazracharya007/"
       target="_blank" rel="noopener noreferrer">
       <i class="fa fa-brands fa-instagram fa-2x"></i></a>
       <span style="color: aliceblue;">	contact@mahipbajracharya.com.np</span>
